# bufr-query

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: Targets.cmake
core/: CMakeLists.txt
core/include/bufr/: BufrDescription.h  BufrParser.h  BufrTypes.h  Data.h  DataCache.h  DataContainer.h  DataObject.h  DataProvider.h  Export.h  File.h  Filter.h  IodaDescription.h  IodaEncoder.h  NcepDataProvider.h  QueryParser.h  QuerySet.h  ResultSet.h  Split.h  SubsetTable.h  SubsetVariant.h  Tokenizer.h  Variable.h  WmoDataProvider.h
core/include/bufr/encoders/: Description.h  ElementWriter.h
core/include/bufr/encoders/netcdf/: Description.h  Encoder.h  NetcdfHelper.h
core/src/bufr/: DataContainer.cpp  DataObject.cpp  DataObjectBuilder.h  Log.h  ObjectFactory.h
core/src/bufr/BufrReader/: BufrDescription.cpp  BufrParser.cpp
core/src/bufr/BufrReader/Exports/: Export.cpp
core/src/bufr/BufrReader/Exports/Filters/: BoundingFilter.cpp  BoundingFilter.h
core/src/bufr/BufrReader/Exports/Splits/: CategorySplit.cpp  CategorySplit.h
core/src/bufr/BufrReader/Exports/Variables/: AircraftAltitudeVariable.cpp  AircraftAltitudeVariable.h  DatetimeVariable.cpp  DatetimeVariable.h  QueryVariable.cpp  QueryVariable.h  RemappedBrightnessTemperatureVariable.cpp  RemappedBrightnessTemperatureVariable.h  SensorScanAngleVariable.cpp  SensorScanAngleVariable.h  SensorScanPositionVariable.cpp  SensorScanPositionVariable.h  SpectralRadianceVariable.cpp  SpectralRadianceVariable.h  TimeoffsetVariable.cpp  TimeoffsetVariable.h  WigosidVariable.cpp  WigosidVariable.h
core/src/bufr/BufrReader/Exports/Variables/Transforms/: OffsetTransform.cpp  OffsetTransform.h  ScalingTransform.cpp  ScalingTransform.h  Transform.h  TransformBuilder.cpp  TransformBuilder.h
core/src/bufr/BufrReader/Exports/Variables/Transforms/atms/: atms_kinds.F90  atms_spatial_average_interface.f90  atms_spatial_average_interface.h  atms_spatial_average_mod.f90
core/src/bufr/BufrReader/Query/: File.cpp  QueryParser.cpp  QueryRunner.cpp  QueryRunner.h  QuerySet.cpp  QuerySetImpl.cpp  QuerySetImpl.h  ResultSet.cpp  ResultSetImpl.cpp  ResultSetImpl.h  SubsetLookupTable.cpp  SubsetLookupTable.h  SubsetTable.cpp  Target.h  Tokenizer.cpp  VectorMath.h  python_bindings.cpp
core/src/bufr/BufrReader/Query/DataProvider/: DataProvider.cpp  NcepDataProvider.cpp  WmoDataProvider.cpp
core/src/bufr/IodaEncoder/: IodaDescription.cpp  IodaEncoder.cpp
core/src/encoders/: Description.cpp
core/src/encoders/netcdf/: Description.cpp  Encoder.cpp
docs/: conf.py  index.rst  python_api.rst  query_path.rst  software_architecture.rst  yaml.rst
docs/uml/: BUFR_BigPicture.puml  BUFR_BigPictureSeq.puml  BUFR_DataCollection.puml  BUFR_QueryClassDiagram.puml
python/: CMakeLists.txt  DataObjectFunctions.cpp  DataObjectFunctions.h  py_bufr.cpp  py_data_cache.cpp  py_data_container.cpp  py_encoder_description.cpp  py_file.cpp  py_ioda_description.cpp  py_ioda_encoder.cpp  py_mpi.cpp  py_mpi.h  py_netcdf_description.cpp  py_netcdf_encoder.cpp  py_parser.cpp  py_query_set.cpp  py_result_set.cpp  py_run_parameters.cpp
python/bufr/: __init__.py
python/bufr/encoders/: __init__.py
python/bufr/encoders/netcdf/: __init__.py
test/: CMakeLists.txt
test/testdata/: rap.t06z.adpsfc.prepbufr.tm00.bufr
test/testinput/: bufrtest_adpsfc_cloud_rrfs_prepbufr_mapping.yaml  bufrtest_adpsfc_mapping.yaml  bufrtest_adpsfc_prepbufr_mapping.yaml  bufrtest_adpsfc_snow_mapping.yaml  bufrtest_adpupa_mapping.yaml  bufrtest_adpupa_prepbufr_mapping.yaml  bufrtest_aircar_mapping.yaml  bufrtest_aircft_amdar103_mapping.yaml  bufrtest_aircft_noamdar103_mapping.yaml  bufrtest_aircft_prepbufr_mapping.yaml  bufrtest_amua_n15_mapping.yaml  bufrtest_amua_ta_mapping.yaml  bufrtest_atms_mapping.yaml  bufrtest_empty_fields_mapping.yaml  bufrtest_esamua_mapping.yaml  bufrtest_esmhs_mapping.yaml  bufrtest_fieldname_validation.py  bufrtest_filter_split_mapping.yaml  bufrtest_filtering_mapping.yaml  bufrtest_hrs_basic_mapping.yaml  bufrtest_lgycld_rrfs_mapping.yaml  bufrtest_long_strs_mapping.yaml  bufrtest_mhs_basic_mapping.yaml  bufrtest_mhs_mapping.yaml  bufrtest_mtiasi_cached.yaml  bufrtest_mtiasi_mapping.yaml  bufrtest_python_mpi_test.py  bufrtest_python_test.py  bufrtest_python_to_ioda.py  bufrtest_read_2_dim_blocks_mapping.yaml  bufrtest_rtma_adpsfc_mapping.yaml  bufrtest_rtma_aircft_NC004103_mapping.yaml  bufrtest_rtma_aircft_mapping.yaml  bufrtest_rtma_mesonet_mapping.yaml  bufrtest_satwnd_avhrr_mapping.yaml  bufrtest_satwnd_new_format_mapping.yaml  bufrtest_satwnd_old_format_mapping.yaml  bufrtest_sevcsr_mapping.yaml  bufrtest_sfcshp_mapping.yaml  bufrtest_simple_groupby_mapping.yaml  (+5 more)
test/testoutput/: CMakeCache.txt  bufrtest_adpsfc.nc  bufrtest_adpsfc_cloud_rrfs_prepbufr.nc  bufrtest_adpsfc_prepbufr.nc  bufrtest_adpsfc_snow.nc  bufrtest_adpupa.nc  bufrtest_adpupa_prepbufr.nc  bufrtest_aircar.nc  bufrtest_aircft_amdar103.nc  bufrtest_aircft_noamdar103.nc  bufrtest_aircft_prepbufr.nc  bufrtest_amua_metop-a.nc  bufrtest_amua_metop-a_ta.nc  bufrtest_amua_n15.nc  bufrtest_amua_ta.nc  bufrtest_atms.nc  bufrtest_atms_n20.nc  bufrtest_empty_fields.nc  bufrtest_esamua.nc  bufrtest_esamua_n18.nc  bufrtest_esmhs.nc  bufrtest_esmhs_noaa-19.nc  bufrtest_filter_split.nc  bufrtest_filter_split_15_7.nc  bufrtest_filtering.nc  bufrtest_hrs_basic.nc  bufrtest_lgycld_rrfs.nc  bufrtest_long_strs.nc  bufrtest_mhs.nc  bufrtest_mhs_basic.nc  bufrtest_mhs_metop-b.nc  bufrtest_mtiasi.nc  bufrtest_mtiasi_metop-c.nc  bufrtest_mtiasi_metop_a.nc  bufrtest_mtiasi_metop_b.nc  bufrtest_mtiasi_metop_c.nc  bufrtest_python_to_ioda.nc  bufrtest_read_2_dim_blocks.nc  bufrtest_rtma_adpsfc.nc  bufrtest_rtma_aircft.nc  (+14 more)
tools/: CMakeLists.txt
tools/bufr2ioda/: CMakeLists.txt  bufr2ioda.cpp
tools/bufr2netcdf/: CMakeLists.txt  bufr2netcdf.cpp
tools/build_scripts/: CMakeLists.txt  bufr_query_cpp_lint.py
tools/show_queries/: CMakeLists.txt  NcepQueryPrinter.cpp  NcepQueryPrinter.h  QueryPrinter.cpp  QueryPrinter.h  WmoQueryPrinter.cpp  WmoQueryPrinter.h  show_queries.cpp
(+1 files in other folders)
